--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
             <a href=""><i class="bx bxs-user"></i></a>
         </div>
         <div>
-            <a href="#" class="panel">
+            <a href="#" class="panel" title="Other Projects">
                 <i class="bx bx-data"></i>
             </a>
-            <a href="#" class="panel">
+            <a href="#" class="panel" title="My Hobbies">
                 <i class="bx bx-joystick"></i>
             </a>
-            <a href="#" class="panel">
+            <a href="#" class="panel" title="Past Projects">
                 <i class="bx bx-archive"></i>
             </a>
-            <a href="#" class="panel">
+            <a href="#" class="panel" title="About Me">
                 <i class="bx bx-spreadsheet"></i>
             </a>
-            <a href="https://github.com/Robinnotbatman" class="panel">
+            <a href="https://github.com/Robinnotbatman" class="panel" title="Github">
                 <i class="bx bxl-github"></i>
             </a>
-            <a href="#" class="panel">
+            <a href="#" class="panel" title="Javascript Projects">
                 <i class="bx bxl-javascript"></i>
             </a>
         </div>
